--- a/app/src/main/res/layout/activity_narrow_it_down.xml
+++ b/app/src/main/res/layout/activity_narrow_it_down.xml
@@ -82,45 +82,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        android:text="Mediterrainian"
+        android:text="Mediterranean"
         app:layout_constraintStart_toStartOf="@+id/chackTradionalAmerican"
         app:layout_constraintTop_toBottomOf="@+id/chackTradionalAmerican" />
 
     <SeekBar
         android:id="@+id/milesBar"
-        android:layout_width="267dp"
-        android:layout_height="18dp"
-        android:layout_marginBottom="14dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="17dp"
+        android:layout_marginBottom="182dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginRight="72dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="182dp"
+        android:max="50"
         android:text="Distance"
-        app:layout_constraintBottom_toTopOf="@+id/miles"
+        app:layout_constraintBottom_toTopOf="@+id/applyfilterbutton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/checkMexician" />
 
     <TextView
         android:id="@+id/miles"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginBottom="49dp"
+        android:layout_marginTop="47dp"
         android:text="0mi"
-        app:layout_constraintEnd_toEndOf="@+id/milesBar"
-        app:layout_constraintStart_toStartOf="@+id/milesBar"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="19dp"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
         android:text="Distance"
         android:textSize="19dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkSouthAmerican" />
+        app:layout_constraintBottom_toTopOf="@+id/milesBar"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -134,5 +140,69 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:text="Price"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="116dp"
+        android:layout_marginTop="115dp"
+        android:text="Cheapest"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/milesBar" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="69dp"
+        android:text="Medium"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/miles" />
+
+    <CheckBox
+        android:id="@+id/checkBox3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
+        android:text="Highest"
+        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/applyfilterbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/roundbutton"
+        android:gravity="center"
+        android:padding="10sp"
+        android:text="Apply Filters"
+        android:textSize="17sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
