--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
         android:padding="10sp"
         android:text="Randomize"
         android:textSize="17sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:textColor="#fffafa"/>
 
     <Button
         android:id="@+id/narrowbutton"
@@ -58,6 +59,7 @@
         android:gravity="center"
         android:text="Narrow It Down"
         android:textSize="17sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:textColor="#fffafa"/>
 
 </RelativeLayout>
