--- a/app/src/main/res/layout/activity_narrow_it_down.xml
+++ b/app/src/main/res/layout/activity_narrow_it_down.xml
@@ -9,13 +9,13 @@
     tools:layout_editor_absoluteY="81dp">
 
     <CheckBox
-        android:id="@+id/checkAsian"
+        android:id="@+id/checkChinese"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:text="Asian"
+        android:text="Chinese"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -33,9 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Mexician"
-        app:layout_constraintStart_toStartOf="@+id/checkAsian"
-        app:layout_constraintTop_toBottomOf="@+id/checkAsian" />
+        android:text="Mexican"
+        app:layout_constraintStart_toStartOf="@+id/checkChinese"
+        app:layout_constraintTop_toBottomOf="@+id/checkChinese" />
 
     <CheckBox
         android:id="@+id/checkFrench"
@@ -43,83 +43,83 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
         android:text="French"
-        app:layout_constraintBottom_toTopOf="@+id/chackTradionalAmerican"
-        app:layout_constraintStart_toStartOf="@+id/chackTradionalAmerican" />
+        app:layout_constraintBottom_toTopOf="@+id/chackAmerican"
+        app:layout_constraintStart_toStartOf="@+id/chackAmerican" />
 
     <CheckBox
-        android:id="@+id/checkMiddleEastern"
+        android:id="@+id/checkIndian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
-        android:text="Middle Eastern"
+        android:text="Indian"
         app:layout_constraintStart_toStartOf="@+id/checkMexician"
         app:layout_constraintTop_toBottomOf="@+id/checkMexician" />
 
     <CheckBox
-        android:id="@+id/chackTradionalAmerican"
+        android:id="@+id/chackAmerican"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:text="Traditional American"
-        app:layout_constraintBottom_toBottomOf="@+id/checkMiddleEastern"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:text="American"
+        app:layout_constraintBottom_toBottomOf="@+id/checkIndian"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/checkMiddleEastern" />
+        app:layout_constraintTop_toTopOf="@+id/checkIndian" />
 
     <CheckBox
-        android:id="@+id/checkSouthAmerican"
+        android:id="@+id/checkJapanese"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="19dp"
-        android:text="South American"
+        android:text="Japanese"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkMiddleEastern" />
+        app:layout_constraintTop_toBottomOf="@+id/checkIndian" />
 
     <CheckBox
-        android:id="@+id/checkMediterrainian"
+        android:id="@+id/checkThai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        android:text="Mediterranean"
-        app:layout_constraintStart_toStartOf="@+id/chackTradionalAmerican"
-        app:layout_constraintTop_toBottomOf="@+id/chackTradionalAmerican" />
+        android:text="Thai"
+        app:layout_constraintStart_toStartOf="@+id/chackAmerican"
+        app:layout_constraintTop_toBottomOf="@+id/chackAmerican" />
 
     <SeekBar
         android:id="@+id/milesBar"
         android:layout_width="0dp"
-        android:layout_height="17dp"
-        android:layout_marginBottom="182dp"
+        android:layout_height="15dp"
+        android:layout_marginBottom="117dp"
         android:layout_marginEnd="72dp"
         android:layout_marginLeft="72dp"
         android:layout_marginRight="72dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="182dp"
-        android:max="50"
+        android:layout_marginTop="117dp"
+        android:max="30"
         android:text="Distance"
-        app:layout_constraintBottom_toTopOf="@+id/applyfilterbutton"
+        app:layout_constraintBottom_toBottomOf="@+id/checkAny"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkMexician" />
+        app:layout_constraintTop_toTopOf="@+id/checkJapanese" />
 
     <TextView
         android:id="@+id/miles"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:layout_marginBottom="49dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginBottom="163dp"
+        android:layout_marginTop="163dp"
         android:text="0mi"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/applyfilterbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/chackAmerican" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
         android:text="Distance"
@@ -145,64 +145,66 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="175dp"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
         android:text="Price"
         android:textSize="19dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkCheap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="116dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="18dp"
         android:text="Cheapest"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/milesBar" />
+        app:layout_constraintStart_toStartOf="@+id/checkAny"
+        app:layout_constraintTop_toBottomOf="@+id/checkAny" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
         android:text="Medium"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
-        app:layout_constraintStart_toEndOf="@+id/checkBox"
-        app:layout_constraintTop_toBottomOf="@+id/miles" />
+        app:layout_constraintBottom_toBottomOf="@+id/checkAny"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/checkAny" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/checkHigh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
+        android:layout_marginTop="18dp"
         android:text="Highest"
-        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/checkMedium"
+        app:layout_constraintTop_toBottomOf="@+id/checkMedium" />
 
     <Button
         android:id="@+id/applyfilterbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/roundbutton"
         android:gravity="center"
         android:padding="10sp"
         android:text="Apply Filters"
+        android:textColor="#fffafa"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/checkHigh" />
+
+    <CheckBox
+        android:id="@+id/checkAny"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Any"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </android.support.constraint.ConstraintLayout>
